2007-06-13  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py: Enable recent files.
	* src/DisplayState.py (RecentDocsMenu.load): work out directories;
	(RecentDocsMenu.build): Use symbolic names for menu.
	* src/RecentFiles.py: Make work with directories and symbolic
	names; remove GNOME-related functionality.
	* src/GrampsDb/_GrampsDBDir.py (open_undodb): Override the base
	method by using undo.db inside the data directory.

2007-06-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_Backup.py (__do_export): check for existance before deleting

2007-06-13  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: handle cursor while rebuilding
	* src/glade/gramps.glade: fix label placement

2007-06-13  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: handle broken dbs that have been opened
	* src/DbState.py: handle broken dbs that have been opened
	* src/GrampsDbUtils/_Backup.py: write intermediate file firs to make
	sure no errors occur when writing, then replace old backups

2007-06-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Improve tooltip for latin-1 option.

2007-06-12  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/AbiWord2Doc.py: Fix width error

2007-06-12  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py:
	* src/ReportBase/__init__.py:
	* src/ReportBase/_Bibliography.py:
	* src/ReportBase/_Endnotes.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/BookReport.py:
	* src/plugins/DetAncestralReport.py:
	  Enhance the source endnotes in some text reports.

2007-06-12  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: better rebuild recovery
	* src/GrampsDb/_GrampsDbConst.py: better rebuild recovery
	* src/GrampsDb/_GrampsDBCallback.py: better rebuild recovery
	* src/DbManager.py: better rebuild recovery
	* src/glade/gramps.glade: better rebuild recovery